--- a/trunk/praca/bibliografia.bib
+++ b/trunk/praca/bibliografia.bib
@@ -59,6 +59,19 @@
 
 @misc{www:DieMan,
 	author={Linux manual},
-	title={\emph{die.net}}, 
+	title={\emph{http://www.die.net/}}, 
 	url={http://www.die.net/},
 }
+
+@misc{www:ArchLinux,
+	author={Arch Linux distribution},
+	title={\emph{http://www.archlinux.org/}}, 
+	url={http://www.archlinux.org/},
+}
+
+@misc{www:IW,
+	author={Johannes Berg},
+	title={\emph{http://linuxwireless.org/en/users/Documentation/iw}}, 
+	url={http://linuxwireless.org/en/users/Documentation/iw},
+}
+
