--- a/trunk/praca/ch_Introduction.tex
+++ b/trunk/praca/ch_Introduction.tex
@@ -1,14 +1,14 @@
 % Wstęp ogólny łączący 802.11 i systemy czasu rzeczywistego.
 
-\subsection{Problemy systemów czasu rzeczywistego}
+\section{Problemy systemów czasu rzeczywistego.}
 
 Badanie komunikacji systemów czasu rzeczywistego wymaga analizy dostępnych rozwiązań na poziomie oprogramowania. Jest to czynność niezbędna ze względu na różnice w implementacji i stosowane techniki programistyczne. W swojej pracy skupiam się na rozwiązaniach \emph{open-source} i systemie \emph{Linux} ze względu na dostępność, zgodność ze standardem POSIX oraz otwarty kod źródłowy.
 
 Systemy z rodziny \emph{open-source} charakteryzują się możliwością stopniowania wsparcia dla procesów czasu rzeczywistego (\cite{wiki:RTLinux}). Zaczynając od podstawowej dystrybucji systemu \emph{Linux}, poprzez różnorodne opcje konfiguracyjne jądra w wersji 2.6 i kończąc na koncepcji współdzielenia zasobów sprzętowych. 
 
-Niniejszy rozdział poświęcam na wprowadzenie do problemów systemów czasu rzeczywistego oraz przegląd odpowiadających im rozwiązań. Ze względu na tematykę pracy koncentruję się również na kwestii komunikacji sieciowej (implementacji stosu IP). 
+Niniejszy rozdział poświęcam na wprowadzenie do problemów systemów czasu rzeczywistego. Ze względu na tematykę pracy koncentruję się również na kwestii komunikacji sieciowej (implementacji stosu IP). 
 
-\subsubsection{System operacyjny Linux ( wersja jądra 2.6 ).}
+\subsection{System operacyjny Linux ( wersja jądra 2.6 ).}
 
 Za analizą zastosowania systemu Linux jako systemu czasu rzeczywistego przemawia jego szeroka dostępność i niski koszt zastosowania. Aplikacje pracujące w reżimie czasu rzeczywistego mogą być pisane zgodnie ze standardem POSIX co wyklucza dodatkowy narzut związany z przyswajaniem nowych interfejsów programistycznych. 
 
@@ -41,7 +41,7 @@ Opcja PREEMPT\_RT wzbogaca jądro o następujące możliwości:
 
 Po zastosowaniu łatki większość kodu obsługi przerwań wykonuje się w kontekście procesu. Wyjątkiem są przerwania związane z zegarem CPU (np. \emph{sheduler\_tick()}). Zastosowane zmiany powodują, że zadanie wykonujące \emph{spin\_lock()} może zrzec się czasu procesora, a co za tym idzie nie powinno działać przy zablokowanych przerwaniach (pojawia się zagrożenie blokadą). Jako rozwiązanie problemu przyjęto opóźnianie operacji, które nie mogą być wykonane przy zablokowanych przerwaniach do czasu ich odblokowania. Dodatkowe techniki redukcji opóźnień polegają przykładowo na rezygnacji z używania niektórych instrukcji MMX związanych z architekturą x86 (wyselekcjonowano instrukcje uznane za zbyt długie).
 
-\subsubsection{Techniki programistyczne w standardzie POSIX}
+\subsection{Techniki programistyczne w standardzie POSIX.}
 
 W środowisku Linux tworzenie aplikacji czasu rzeczywistego polega na przemyślanym przeciwdziałaniu najczęstszym przyczynom długich opóźnień. Jako podstawowe przyczyny opóźnień wyróżniam:
 
@@ -57,7 +57,7 @@ Kolejnym krokiem jest utrzymanie w pamięci wszystkich stron kodu, danych i stos
 
 Należy również pamiętać o tworzeniu wszelkich wątków potrzebnych do działania aplikacji na samym początku jej działania.
 
-\subsubsection{Xenomai i RTAI}
+\subsection{Xenomai i RTAI.}
 
 Zarówno Xenomai, jak i RTAI są rozwiązaniami opartymi o ideę współdzielenia zasobów sprzętowych. Współdzielenie odbywa się poprzez warstwę abstrakcji sprzętowej (w tym przypadku jest to nanokernel Adeos). Adeos nie jest jednak wyłącznie niskopoziomową częścią jądra, lecz pozwala na jednoczesne uruchomienie wielu jąder, które za jego pośrednictwem współdzielą zasoby sprzętowe. 
 
@@ -73,7 +73,7 @@ Propagacja przerwań odbywa się za pośrednictwem kolejki. Kolejka jest łańcu
 
 Warto wspomnieć również o udostępnianej w środowisku Xenomai opcji \emph{skórek RTOS} (ang. \emph{real-time operating system skins}). Pozwalają one na wybór API, z którego będą korzystać uruchamiane w Xenomai aplikacje. Do wyboru są przykładowo skórki VxWorks, co ukazuje tendencje rozwoju w stronę przenośności rozwiązania.
 
-\subsubsection{Porównanie Linux 2.6, Xenomai, RTAI i VxWorks}
+\subsection{Porównanie Linux 2.6, Xenomai, RTAI i VxWorks.}
 
 Z dostępnego w publikacji \cite{pub:Comparison} zestawienia systemów wynika głównie fakt, że w prostym scenariuszu, kiedy znana jest liczba (w tym przypadku wyłącznie jedna) i rodzaj pracujących aplikacji czasu rzeczywistego system Linux w wersji 2.6 spisuje się zadowalająco w roli systemu o łagodnych ograniczeniach czasowych. W przypadku jądra systemu Linux 2.6 razem z liczbą i stopniem skomplikowania uruchamianych aplikacji rośnie również ilość kodu do przeanalizowania, w celu zapewnienia całkowitego determinizmu operacji, co szybko staje się niepraktyczne.
 
@@ -81,19 +81,19 @@ Interesujący jest dla mnie fakt, że gdy w rolę wchodzi dodatkowo komunikacja 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\subsection{Standardy 802.11 w systemach czasu rzeczywistego}
+\section{Standardy 802.11 w systemach czasu rzeczywistego.}
 
 Ze względu na swój charakter komunikacja bezprzewodowa jest nieprzewidywalna. Nie jesteśmy w stanie z góry założyć, ze sygnał nie zostanie zakłócony i informacja dotrze do celu. Pocieszający jest fakt, że na przestrzeni lat standard 802.11 podlegał wielu modyfikacjom i poprawkom (np. 802.11e, 802.11n). Część z tych aktualizacji dedykowana była możliwości zastosowania medium bezprzewodowego do komunikacji systemów czasu rzeczywistego. Koncentrują się one na potrzebie zapewnienia takiemu systemowi okien dostępu bezkolizyjnego i nadawaniu priorytetów w ruchu sieciowym. Zabiegi te pozwalają na osadzenie komunikacji systemów czasu rzeczywistego w zakłóconym paśmie transmisyjnym oraz ich koegzystencję z innymi stacjami. 
 
 Niniejszy rozdział poświęcony jest przeglądowi dostępnych rozwinięć standardu 802.11 pod kątem użyteczności w komunikacji systemów czasu rzeczywistego.
 
-\subsubsection{Problemy w 802.11 MAC - opcja DCF}
+\subsection{Problemy w 802.11 MAC - opcja DCF.}
 
 Podstawowa wersja protokołu dostępu do medium (ang. \emph{Distributed Coordination Function}, w skrócie DCF) nie uwzględnia możliwości ustalenia priorytetów. Brak priorytetów na poziomie MAC w oczywisty sposób utrudnia realizację przewidywalnej komunikacji w systemie czasu rzeczywistego. System musiałby konkurować ze wszystkimi innymi stacjami (nawet tymi, które nie są świadome jego istnienia, a więc wprowadzają wyłącznie zakłócenia). 
 
 Dodatkowo, stacje, które przy próbie dostępu napotkały zajęty kanał transmisji, muszą odczekać pewien losowy okres czasu (ang. \emph{Backoff}). Długość okresu oczekiwania obliczana jest jako iloczyn losowej wartości z zakresu od zera do ustalonej długości CW (ang. \emph{Contention Window}) i czasu podróży ramki w łączu (ang. \emph{Slot Time}). Oczywiste jest, że wprowadzenie losowego parametru kłóci się z ideą deterministycznej pracy.
 
-\subsubsection{802.11 MAC - opcja PCF}
+\subsection{802.11 MAC - opcja PCF.}
 
 Część powyżej przedstawionych problemów jest adresowana przez wprowadzenie protokołu dostępu PCF (ang. \emph{Point Coordination Function}). Opcja ta wyróżnia jedną stację (typowo jest to punkt dostępu - AP), która pełni rolę koordynatora komunikacji. Koordynator uzyskuje dostęp do łącza częściej, gdyż jego czas oczekiwania między kolejnymi ramkami jest krótszy. Po uzyskaniu dostępu do łącza koordynator wybiera stację, która może rozpocząć transmisje w oknie bezkolizyjnym. 
 
@@ -107,7 +107,7 @@ których czas przesyłania przekroczy czas okresu TBTT. Przekroczenie czasu TBTT
 czasu transmisji pojedynczej stacji w tym okresie powoduje, że obsługa komunikacji systemów czasu rzeczywistego za pomocą
 protokołu PCF jest utrudniona.
 
-\subsubsection{Wsparcie dla QoS w standardzie 802.11e}
+\subsection{Wsparcie dla QoS w standardzie 802.11e.}
 
 Standard 802.11e wprowadził nowy protokół dostępu EDCA (ang. \emph{Enhanced Distributed Channel Access}). Protokół ten udostępnia 4 klasy priorytetów dla ruchu. System priorytetów zbudowany jest na bazie parametrów odziedziczonych po protokole DCF. 
 
@@ -137,7 +137,7 @@ kolizji. Ostateczna długość odstępu międzyramkowego wyliczana jest poprzez 
 \emph{Slot Time} łącza. Warto zauważyć, że zmniejszanie czasów oczekiwania rywalizującej stacji umożliwia jej częstszy
 dostęp do medium, lecz powoduje również wzrost kolizji na łączu. 
 
-\subsubsection{Zastosowanie 802.11e w przykładowym środowisku komunikacyjnym}
+\subsection{Zastosowanie 802.11e w przykładowym środowisku.}
 
 Standard 802.11e udostępnia następujące klasy dostępu:
 
@@ -150,9 +150,9 @@ Standard 802.11e udostępnia następujące klasy dostępu:
 
 W tym przypadku system czasu rzeczywistego mógłby korzystać z klasy AC\_VO (\cite{pub:802.11e}). Inne stacje świadome istnienia systemu mogą komunikować się w klasie AC\_BK. Jeśli chodzi o stacje nieświadome istnienia systemu to można dla nich przeznaczyć klasę AC\_BE.
 
-\subsubsection{Rozwiązania na poziomie oprogramowania Linux}
+\subsection{Rozwiązania na poziomie oprogramowania Linux.}
 
-Mechanim QoS (ang. \emph{Quality Of Service}) jest realizowany w jądrze 2.6 w postaci struktury komponentów, z których każdy realizuje pewien podzbiór funkcjonalności związanych z sterowaniem ruchem sieciowym (\cite{pub:QoS}). Główne składniki modułu QoS w systemie Linux to:
+Mechanizm QoS (ang. \emph{Quality Of Service}) jest realizowany w jądrze 2.6 w postaci struktury komponentów, z których każdy realizuje pewien podzbiór funkcjonalności związanych z sterowaniem ruchem sieciowym (\cite{pub:QoS}). Główne składniki modułu QoS w systemie Linux to:
 
 \begin{itemize}
 \item qdisc - odpowiada za politykę kolejkowania ramek na urządzeniu.
@@ -168,7 +168,7 @@ Qdisc nie wykorzystujący klas pozwala na realizację prostej polityki kolejkowa
 
 Qdisc korzystający z klas pozwala na implementację bardzo skomplikowanych struktur drzewiastych (ang. \emph{Hierachical Token Bucket}). Każda klasa może zawierać inne klasy, przy czym w liściach drzewa następuje kształtowanie ruchu (znajdują się tam elementy qdisc). Klasy służą jedynie do odpowiedniego podziału dostępnych żetonów. Zaimplementowano również mechanizm pożyczania. Jeśli klasa dziecko wyczerpała dostępne żetony, to pożycza je od klasy rodzica.
 
-\subsubsection{Stos IP RTnet}
+\subsection{Stos IP RTnet.}
 
 RTnet jest nowym stosem IP przeznaczonym dla systemów Xenomai i RTAI. Zastępuje on standardowy stos systemu Linux i wprowadza zmiany istotne z punktu widzenia komunikacji systemów czasu rzeczywistego.
 
