--- a/trunk/praca/ch_Sumup.tex
+++ b/trunk/praca/ch_Sumup.tex
@@ -2,4 +2,10 @@
 
 Na podstawie zaprezentowanych wyników pomiarów dokonałem analizy wpływu stanu medium transmisyjnego oraz ustawień interfejsów poszczególnych uczestników pomiaru na zjawisko roamingu stacji klienckiej w standardzie 802.11. Moim dążeniem była identyfikacja głównych czynników będących przyczyną zwiększenia opóźnień. Dobrane parametry różnicujące scenariusze pomiarowe miały za zadanie symulację sytuacji, które może napotkać stacja przemieszczająca się między strefami zasięgu punktów dostępowych.
 
-Powstała w wyniku pracy aplikacja \emph{hop-sniffer} posiada szerokie możliwości rozwoju. Skuteczna przeprowadzenie obserwacji opisywanego zjawiska dowodzi użyteczności zastosowanego podejścia. Program jest bazą do implementacji innych procedur pomiarowych, pod warunkiem, że ich elementarnymi krokami są zdarzenia przesłania ramek standardu 802.11. Uniwersalność rozwiązania może zostać zwiększona dzięki zastosowaniu interfejsu użytkownika do komponowania niezdefiniowanych scenariuszy. Cel ten może zostać łatwo osiągnięty przez wprowadzenie dodatkowej abstrakcji procedury pomiarowej, która sprowadza się do określenia różnicy stempli czasowych wybranych zdarzeń (określanych przez typy ramek i ich zawartość).Aplikacja ukazuje również sposób na podejścia do potrzeby przełączania kanału radiowego w trakcie realizacji scenariusza bez groźby utraty informacji z medium potrzebnych do jego kontynuacji.  
+Powstała w wyniku pracy aplikacja \emph{hop-sniffer} posiada szerokie możliwości rozwoju. Skuteczna przeprowadzenie obserwacji opisywanego zjawiska dowodzi użyteczności zastosowanego podejścia. Ostatecznie implementacji uległa część dotycząca roamingu, ale program oferuje bazę do wdrożenia innych procedur pomiarowych, pod warunkiem, że ich elementarnymi krokami są zdarzenia przesłania ramek standardu 802.11. Uniwersalność rozwiązania może zostać zwiększona dzięki zastosowaniu interfejsu użytkownika do komponowania niezdefiniowanych scenariuszy. Cel ten może zostać łatwo osiągnięty przez wprowadzenie dodatkowej abstrakcji procedury pomiarowej, która sprowadza się do określenia różnicy stempli czasowych wybranych zdarzeń (określanych przez typy ramek i ich zawartość).Aplikacja ukazuje również sposób podejścia do potrzeby przełączania kanału radiowego w trakcie realizacji scenariusza bez groźby zgubienia ramek potrzebnych do jego kontynuacji. 
+
+Ze względu na dużą ilość czynników wpływających na zakłócenia łącza i czasy komunikacji bardziej przewidywalne byłoby izolowane środowisko pomiarowe. Przykładowo, wszystkie cztery stacje biorące udział w pomiarze mogą znajdować się w ekranowanym opakowaniu, gdzie wymuszenie roamingu odbywałoby się poprzez zdecydowane osłabienie mocy sygnału jednego z punktów dostępowych. Oczywiście pojęcie \emph{stacja} nie musi oznaczać pojedynczego komputera, lecz interfejs karty radiowej zamontowanej na wspólnej maszynie. W takich warunkach wpływ poszczególnych czynników jest łatwiejszy do określenia. 
+
+
+
+
