--- a/trunk/praca/ch_Target.tex
+++ b/trunk/praca/ch_Target.tex
@@ -1,6 +1,6 @@
 % Cel pracy. Open source, systemy cz. rzeczywistego, 802.11.
 
-Celem niniejszej pracy inżynierskiej jest specyfikacja wymagań i implementacja narzędzia pomiarowego \emph{hop-sniffer} umożliwiającego obserwacje wybranych zjawisk zachodzących podczas komunikacji systemów w standardzie 802.11. Główny nacisk kładziony jest na pomiar zależności czasowych między zdarzeniami charakteryzującymi dany scenariusz komunikacyjny. Poprzez zdarzenie rozumiem fakt nadania lub odebrania ramki 802.11. Ramki są podstawowym elementem protokołu komunikacyjnego, więc możliwość obrazowania zależności czasowych między nimi daje szansę  ustalenia trwania dowolnych zjawisk charakteryzujących 802.11.
+Celem niniejszej pracy inżynierskiej jest wytworzenie narzędzia pomiarowego \emph{hop-sniffer} umożliwiającego obserwacje wybranych zjawisk zachodzących podczas komunikacji systemów w standardzie 802.11. Główny nacisk kładziony jest na pomiar zależności czasowych między zdarzeniami charakteryzującymi dany scenariusz komunikacyjny. Poprzez zdarzenie rozumiem fakt nadania lub odebrania ramki 802.11. Ramki są podstawowym elementem protokołu komunikacyjnego, więc możliwość obrazowania zależności czasowych między nimi daje szansę  ustalenia trwania dowolnych zjawisk charakteryzujących 802.11.
 
 Skupienie na pomiarze parametrów czasowych wynika z przyświecającego pracy celu analizy zastosowania komunikacji bezprzewodowej w wymianie danych systemów czasu rzeczywistego. Systemy takie w swoim obrębie pracują w sposób deterministyczny i zgodny z przyjętymi założeniami. Problem pojawia się w sytuacji, gdy nadchodzi potrzeba ustanowienia łącza komunikacyjnego między nimi. W celu zachowania założeń opóźnienia wprowadzane przez takie łącze muszą spełniać te same rygorystyczne wymagania co same systemy. Możliwość pomiarów oferowana przez program \emph{hop-sniffer} jest pomocna nie tyle w odpowiedzi na pytanie, czy komunikacja w standardzie 802.11 jest deterministyczna, lecz jakie mogą być przybliżone czasy trwania wybranych zjawisk w ustalonych warunkach medium. 
 
